--- a/curve/index.html
+++ b/curve/index.html
@@ -85,7 +85,7 @@
             <div class="ui-component-card ui-component-card--feature">
               <img src="https://res.cloudinary.com/uisual/image/upload/assets/graphics/notification.png" alt="#" loading="lazy">
               <div class="ui-component-card--feature-content">
-                <h4 class="ui-component-card--feature-title">Lorem ipsum dolor.</h4>
+                <h4 class="ui-component-card--feature-title">日本語のタイトル</h4>
                 <p>Lorem ipsum dolor sit amet sed eiusmod tempor incididunt.</p>
               </div>
             </div>
